Готовы блоки Benefits и Popular

--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,8 @@
 
 		@@include('widgets/hero.html')
 		@@include('widgets/recom.html')
+		@@include('widgets/benefits.html')
+		@@include('widgets/popular.html')
 
 	</main>
 
