--- a/src/widgets/recom.html
+++ b/src/widgets/recom.html
@@ -1,20 +1,20 @@
 <section class="recom">
   <div class="container">
-    <div class="default-wrapper">
+    <div class="default-wrapper-dark">
       <!-- Swiper -->
       <div class="swiper recomSwiper">
         <div class="swiper-wrapper">
           <div class="swiper-slide">
             <div class="recom-item">
               <div class="recom-left">
-                <ul class="recom-tags">
+                <ul class="charact-tags">
                   <li><span>147.99</span> 133.99 EUR</li>
                   <li>-10%</li>
                 </ul>
                 <img src="img/recom-img.jpg" alt="">
               </div>
               <div class="recom-right">
-                <h2 class="title-m1">Акция! Три в 1</h2>
+                <h2 class="title-1">Акция! Три в 1</h2>
                 <div class="text">
                   1. Кварцевый обогреватель WS Standard <br>
                   2. Беспроводной терморегулятор <br>
@@ -27,14 +27,14 @@
           <div class="swiper-slide">
             <div class="recom-item">
               <div class="recom-left">
-                <ul class="recom-tags">
+                <ul class="charact-tags">
                   <li><span>147.99</span> 133.99 EUR</li>
                   <li>-10%</li>
                 </ul>
                 <img src="img/recom-img.jpg" alt="">
               </div>
               <div class="recom-right">
-                <h2 class="title-m1">Акция! Три в 1</h2>
+                <h2 class="title-1">Акция! Три в 1</h2>
                 <div class="text">
                   1. Кварцевый обогреватель WS Standard
                   2. Беспроводной терморегулятор
@@ -47,14 +47,14 @@
           <div class="swiper-slide">
             <div class="recom-item">
               <div class="recom-left">
-                <ul class="recom-tags">
+                <ul class="charact-tags">
                   <li><span>147.99</span> 133.99 EUR</li>
                   <li>-10%</li>
                 </ul>
                 <img src="img/recom-img.jpg" alt="">
               </div>
               <div class="recom-right">
-                <h2 class="title-m1">Акция! Три в 1</h2>
+                <h2 class="title-1">Акция! Три в 1</h2>
                 <div class="text">
                   1. Кварцевый обогреватель WS Standard
                   2. Беспроводной терморегулятор
@@ -67,14 +67,14 @@
           <div class="swiper-slide">
             <div class="recom-item">
               <div class="recom-left">
-                <ul class="recom-tags">
+                <ul class="charact-tags">
                   <li><span>147.99</span> 133.99 EUR</li>
                   <li>-10%</li>
                 </ul>
                 <img src="img/recom-img.jpg" alt="">
               </div>
               <div class="recom-right">
-                <h2 class="title-m1">Акция! Три в 1</h2>
+                <h2 class="title-1">Акция! Три в 1</h2>
                 <div class="text">
                   1. Кварцевый обогреватель WS Standard
                   2. Беспроводной терморегулятор
