Готовы блоки Catbl и Special

--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,8 @@
 		@@include('widgets/recom.html')
 		@@include('widgets/benefits.html')
 		@@include('widgets/popular.html')
+		@@include('widgets/catbl.html')
+		@@include('widgets/special.html')
 
 	</main>
 
