--- a/src/widgets/popular.html
+++ b/src/widgets/popular.html
@@ -125,6 +125,34 @@
               </button>
             </div>
           </div>
+          <div class="swiper-slide">
+            <div class="card">
+              <a href="product.html" class="card-img">
+                <ul class="charact-tags">
+                  <li>-10%</li>
+                </ul>
+                <img src="img/card-img.jpg" alt="">
+              </a>
+              <a href="product.html" class="card-info">
+                <div class="card-info-row">
+                  <div class="card-name">Керамический обогреватель FLYME 1200P</div>
+                  <div class="card-price">
+                    <span class="old">147.99</span>
+                    133.99 €
+                  </div>
+                </div>
+                <div class="card-text">
+                  Мощность: 1200Вт <br>
+                  Площадь: ~ 20 м.кв <br>
+                  Размер: 900х450 мм
+                </div>
+              </a>
+              <button class="link-withicon">
+                <i class="icomoon icon-cart"></i>
+                <span>В корзину</span>
+              </button>
+            </div>
+          </div>
         </div>
       </div>
     </div>
