Готовы блоки Reviews, Special second, History

--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,9 @@
 		@@include('widgets/popular.html')
 		@@include('widgets/catbl.html')
 		@@include('widgets/special.html')
+		@@include('widgets/reviews.html')
+		@@include('widgets/special-second.html')
+		@@include('widgets/history.html')
 
 	</main>
 
