Готовы блоки Gallery, Form-one, Footer

--- a/src/index.html
+++ b/src/index.html
@@ -24,10 +24,12 @@
 		@@include('widgets/reviews.html')
 		@@include('widgets/special-second.html')
 		@@include('widgets/history.html')
+		@@include('widgets/gallery.html')
+		@@include('widgets/form-one.html')
 
 	</main>
 
-	<!-- @@include('template/footer.html') -->
+	@@include('template/footer.html')
 
 	<!-- @@include('template/modals.html') -->
 
