--- a/src/widgets/reviews.html
+++ b/src/widgets/reviews.html
@@ -4,7 +4,7 @@
       <h2 class="title-1">Наши клиенты отмечают <span>приятный сервис и теплое отношение</span></h2>
       <p class="section-text">Уже более 340 покупателей доверили нам создание комфортного климата у себя дома. Мы поговорили с некоторыми из них, и
       вот что они говорят</p>
-      <a href="review.html" class="link">Смотреть больше</a>
+      <a href="reviews.html" class="link">Смотреть больше</a>
     </div>
     <div class="reviews__container">
       <div class="col">
