Готова страница Payment and delivery

--- a/src/widgets/contacts.html
+++ b/src/widgets/contacts.html
@@ -10,7 +10,7 @@
         <div class="contacts__list">
           <div class="contacts__group">
             <div class="contacts-item"><i class="icomoon icon-phone"></i><a href="tel:+37256661608">+372 5666 1608</a></div>
-            <div class="contacts-item"><i class="icomoon icon-postall"></i><a href="mailto:info@warmsystem.eu">info@warmsystem.eu</a></div>
+            <div class="contacts-item"><i class="icomoon icon-postal"></i><a href="mailto:info@warmsystem.eu">info@warmsystem.eu</a></div>
             <div class="contacts-item"><i class="icomoon icon-place"></i><p>Punane 50, Tallinn, 13619, Estonia</p></div>
           </div>
           <div class="contacts__group">
