--- a/src/widgets/product.html
+++ b/src/widgets/product.html
@@ -199,8 +199,10 @@
             </div>
           </div>
           <div class="delivery-card">
-            <p>Другой способ доставки</p>
-            <a href="#">Запросить цену</a>
+            <div class="delivery-card-content">
+              <p>Другой способ доставки</p>
+              <a href="#">Запросить цену</a>
+            </div>
           </div>
         </div>
         <div class="product__details">
