Модальные окна + доработки
- Сделал анимации
- Сделал модалки через фансибокс
- Доработал всё, посмотрев комментарии.

Получается что группу страниц "Основные страницы" делал 15, 16, 17, 18 сентября.

--- a/src/widgets/hero.html
+++ b/src/widgets/hero.html
@@ -1,15 +1,15 @@
 <section class="hero">
   <div class="container">
     <div class="hero__heading">
-      <div class="hero__heading-str">
-        <span class="text-tag">Создайте</span>
+      <div class="hero__heading-str element-animation">
+        <span class="text-tag element-animation">Создайте</span>
         комфортный
       </div>
-      <div class="hero__heading-str">
+      <div class="hero__heading-str element-animation">
         климат
-        <span class="text-tag">в жилых и офисных помещениях</span>
+        <span class="text-tag element-animation">в жилых и офисных помещениях</span>
       </div>
-      <a href="catalog.html" class="link">Перейти в каталог</a>
+      <a href="catalog.html" class="link element-animation">Перейти в каталог</a>
     </div>
     <img src="img/hero-img.jpg" class="hero__img" alt="">
   </div>
