--- a/src/widgets/product-about.html
+++ b/src/widgets/product-about.html
@@ -4,9 +4,9 @@
           <div id="prodAboutTabs" class="tabs-style">
             <!-- Кнопки -->
             <ul class="tabs-nav">
-              <li><a href="#prodAboutTab-1">Характеристики</a></li>
-              <li><a href="#prodAboutTab-2">Комплектация</a></li>
-              <li><a href="#prodAboutTab-3">Документы</a></li>
+              <li><a href="#prodAboutTab-1">Проблема</a></li>
+              <li><a href="#prodAboutTab-2">Принцип работы</a></li>
+              <li><a href="#prodAboutTab-3">Как выбрать</a></li>
             </ul>
             <!-- Контент -->
             <div class="tabs-items">
@@ -55,11 +55,107 @@
               </div>
               <div class="tabs-item" id="prodAboutTab-2">
                 <div>
-                  
+                  <div class="heading-row">
+                    <h2 class="title-1">Как работают обогреватели:</h2>
+                    <div>
+                      <p>Мы предлагаем только эффективные и экономичные обогреватели. Они обеспечивают надежное и быстрое отопление вашего
+                      помещения. Нагреваются до безопасной температуры. Работают бесшумно и не сушат воздух.</p>
+                    </div>
+                  </div>
+                  <div class="loochs-list">
+                    <div class="item">
+                      <img src="img/looch.svg" alt="">
+                      <h3>Подача питания</h3>
+                    </div>
+                    <div class="item">
+                      <img src="img/looch.svg" alt="">
+                      <h3>Нагрев нагревательного элемента</h3>
+                    </div>
+                    <div class="item">
+                      <img src="img/looch.svg" alt="">
+                      <h3>Передача тепла</h3>
+                    </div>
+                    <div class="item">
+                      <img src="img/looch.svg" alt="">
+                      <h3>Регулировка температуры</h3>
+                    </div>
+                    <div class="item">
+                      <img src="img/looch.svg" alt="">
+                      <h3>Автоматическое отключение в случае перегрева</h3>
+                    </div>
+                  </div>
+                </div>
               </div>
               <div class="tabs-item" id="prodAboutTab-3">
                 <div>
-                  
+                  <h2 class="title-1">Следует учитывать несколько ключевых факторов:</h2>
+                  <div class="steps__cards">
+                    <div class="stepcard">
+                      <div class="stepcard-numb">/01</div>
+                      <h3 class="stepcard-title">Тип обогревателя</h3>
+                      <div class="stepcard-text">
+                        <p>Существует несколько типов обогревателей. Каждый тип имеет свои особенности и предназначение. Мы предлагаем керамические
+                        и кварцевые обогреватели. Они самые эффективные и очень экономичные.</p>
+                      </div>
+                    </div>
+                    <div class="stepcard">
+                      <div class="stepcard-numb">/02</div>
+                      <h3 class="stepcard-title">Площадь помещения</h3>
+                      <div class="stepcard-text">
+                        <p>Учитывайте размер помещения, в котором будет использоваться обогреватель. Разные обогреватели имеют разную мощность и
+                        могут быть предназначены для разных площадей.</p>
+                      </div>
+                    </div>
+                    <div class="stepcard">
+                      <div class="stepcard-numb">/03</div>
+                      <h3 class="stepcard-title">Безопасность</h3>
+                      <div class="stepcard-text">
+                        <p>Обратите внимание на безопасность, например, термостат и углеродный след. Наши обогреватели безопасны для человека и
+                        природы, они не оставляют углеродного следа, а в термостате можно установить желаемую температуру в доме.</p>
+                      </div>
+                    </div>
+                    <div class="stepcard">
+                      <div class="stepcard-numb">/04</div>
+                      <h3 class="stepcard-title">Удобство использования</h3>
+                      <div class="stepcard-text">
+                        <p>Рассмотрите функциональность и удобство использования обогревателя. Имеет ли он терморегулятор, таймер. Мы продаем
+                        обогреватели с терморегулятором и таймером, а также их можно передвигать благодаря колесикам.</p>
+                      </div>
+                    </div>
+                    <div class="stepcard">
+                      <div class="stepcard-numb">/05</div>
+                      <h3 class="stepcard-title">Шумовой уровень</h3>
+                      <div class="stepcard-text">
+                        <p>Если вам важен спокойный сон всей семьи, обратите внимание на шумовой уровень обогревателя. Наши модели работают бесшумно.</p>
+                      </div>
+                    </div>
+                    <div class="stepcard">
+                      <div class="stepcard-numb">/06</div>
+                      <h3 class="stepcard-title">Цена и бюджет</h3>
+                      <div class="stepcard-text">
+                        <p>Определите свой бюджет и сравните цены на доступные модели обогревателей.</p>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="default-wrapper-dark prodconsult">
+                    <div class="col">
+                      <img src="img/prodconsult-img.jpg" class="prodconsult__img" alt="">
+                    </div>
+                    <div class="col">
+                      <h2 class="title-2">Если вы сомневаетесь в выборе, оставьте заявку на бесплатную консультацию. Наш эксперт Олег с 10-летним опытом с
+                      радостью ответит на все ваши вопросы!</h2>
+                      <div class="form form-consult">
+                        <div class="form-group">
+                          <input type="text" class="form-input" placeholder="Алекс">
+                        </div>
+                        <div class="form-group">
+                          <input type="numer" class="form-input" placeholder="+372 565 6767">
+                        </div>
+                        <p class="accept">Нажимая на кнопку, вы соглашаетесь с условиями <a href="#">политики конфиденциальности</a></p>
+                        <input type="submit" value="Хочу бесплатную консультацию" class="link-input">
+                      </div>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
