--- a/src/widgets/special-second.html
+++ b/src/widgets/special-second.html
@@ -9,7 +9,26 @@
         <h2 class="title-1">Закажите установку оборудования <span>у надежной команды</span></h2>
         <p>Мы не только проконсультируем, какое оборудование подойдет вам лучше всего, но также отправим мастера на ваш объект для
         демонтажа старых обогревателей и установки новых</p>
-        <a href="#" class="link">Узнать стоимость установки</a>
+        <a data-fancybox href="#stoimostDostavki" class="link">Узнать стоимость установки</a>
+        <div style="display: none; width: 640px;" class="modal" id="stoimostDostavki">
+          <div class="modal-heading">
+            <h2 class="modal-title">Установка оборудования</h2>
+          </div>
+          <form action="" class="form">
+            <div class="form-group">
+              <input type="text" class="form-input" placeholder="Ваше имя">
+            </div>
+            <div class="form-group">
+              <input type="numer" class="form-input" placeholder="+372 565 6767">
+            </div>
+            <div class="form-group">
+              <label for="politika" class="checkbox">
+                <input type="checkbox" id="politika"><span>Я согласен с условиями <a href="#">политики конфиденциальности</a></span>
+              </label>
+            </div>
+            <input type="submit" value="Узнать стоимость установки" class="link-input">
+          </form>
+        </div>
       </div>
     </div>
   </div>
