--- a/src/widgets/warranty.html
+++ b/src/widgets/warranty.html
@@ -10,7 +10,7 @@
         </div>
         <div class="col">
           <p>Прочитайте подробную информацию о возврате</p>
-          <a href="#" class="link">Открыть</a>
+          <a href="https://drive.google.com/file/d/1Pd3WruhjIxvlUnNH7oyrZdLYUCJPShN0/view" target="_blank" class="link">Открыть</a>
         </div>
       </div>
     </div>
