Готовы страницы Корзины и Оформления заказа

--- a/src/widgets/faq-form.html
+++ b/src/widgets/faq-form.html
@@ -6,7 +6,7 @@
           <span>У вас другой вопрос?</span> Задайте его нам - мы с радостью поможем!
         </h2>
       </div>
-      <form action="" class="form">
+      <form action="" class="form woocommerce-checkout">
         <div class="row">
           <div class="form-group">
             <input type="text" class="form-input" placeholder="Ваше имя">
