--- a/src/404.html
+++ b/src/404.html
@@ -28,8 +28,7 @@
   </main>
 
   @@include('template/footer.html')
-
-  <!-- @@include('template/modals.html') -->
+  @@include('template/modals.html')
 
   @@include('template/scripts.html')
 
