--- a/src/catalog.html
+++ b/src/catalog.html
@@ -22,8 +22,7 @@
   </main>
 
   @@include('template/footer.html')
-
-  <!-- @@include('template/modals.html') -->
+  @@include('template/modals.html')
 
   @@include('template/scripts.html')
 
