--- a/src/how-to-order.html
+++ b/src/how-to-order.html
@@ -20,8 +20,7 @@
   </main>
 
   @@include('template/footer.html')
-
-  <!-- @@include('template/modals.html') -->
+  @@include('template/modals.html')
 
   @@include('template/scripts.html')
 
