--- a/src/index.html
+++ b/src/index.html
@@ -30,8 +30,7 @@
 	</main>
 
 	@@include('template/footer.html')
-
-	<!-- @@include('template/modals.html') -->
+	@@include('template/modals.html')
 
 	@@include('template/scripts.html')
 
