--- a/src/product.html
+++ b/src/product.html
@@ -27,8 +27,7 @@
   </main>
 
   @@include('template/footer.html')
-
-  <!-- @@include('template/modals.html') -->
+  @@include('template/modals.html')
 
   @@include('template/scripts.html')
 
