--- a/src/warranty.html
+++ b/src/warranty.html
@@ -20,8 +20,7 @@
   </main>
 
   @@include('template/footer.html')
-
-  <!-- @@include('template/modals.html') -->
+  @@include('template/modals.html')
 
   @@include('template/scripts.html')
 
