Сделал оставшиеся страницы ЛК
- Заказы
- Подробности и заказе
- Настройки

--- a/src/lk-order.html
+++ b/src/lk-order.html
@@ -18,76 +18,87 @@
     <section class="lk">
       <div class="container">
         <div class="lk-section default-wrapper">
-          <div class="lk-heading">
-            <div class="col">
-              <h1 class="title-1">История заказов</h1>
-            </div>
-            <div class="col">
-              <a href="lk.html" class="link">Вернуться к учетной записи</a>
-            </div>
+          <div class="lk-head">
+            <h1 class="lk-title">Заказ #849555738</h1>
+            <a href="#" download="download" class="link-withicon"><i class="icomoon icon-download"></i> Скачать счет</a>
+            <a href="lk-orders.html" class="link">Вернуться к истории заказов</a>
           </div>
-          <table class="table-style orders-table">
+          <div class="lk-text">Метод оплаты: LHV</div>
+          <table class="table-style order-table">
             <thead>
               <tr>
-                <th>Дата заказа</th>
-                <th>Номер</th>
+                <th>Товар</th>
+                <th>Количество</th>
+                <th>Цена</th>
                 <th>Сумма</th>
-                <th></th>
-                <th></th>
               </tr>
             </thead>
             <tbody>
               <tr>
-                <td>21/11/2022</td>
-                <td>849555738</td>
-                <td>€108,99</td>
-                <td><a href="#" download="download"><img src="img/icons/download-orange.svg" alt=""> Скачать счет</a></td>
-                <td><a href="lk-order.html">Подробности</a></td>
+                <td>Керамический обогреватель FLYME 1200P</td>
+                <td>1</td>
+                <td>€255,99</td>
+                <td>€255,99</td>
               </tr>
               <tr>
-                <td>01/01/2022</td>
-                <td>127653308</td>
-                <td>€45,45</td>
-                <td><a href="#" download="download"><img src="img/icons/download-orange.svg" alt=""> Скачать счет</a></td>
-                <td><a href="lk-order.html">Подробности</a></td>
+                <td>Керамический обогреватель FLYME 1200P</td>
+                <td>1</td>
+                <td>€255,99</td>
+                <td>€255,99</td>
+              </tr>
+              <tr>
+                <td>Керамический обогреватель FLYME 1200P</td>
+                <td>1</td>
+                <td>€255,99</td>
+                <td>€255,99</td>
+              </tr>
+              <tr class="soderjanie-itogo">
+                <td></td>
+                <td></td>
+                <td>
+                  <div class="item">Сумма:</div>
+                  <div class="item">Доставка:</div>
+                  <div class="item">Скидка:</div>
+                </td>
+                <td>
+                  <div class="item">€768,99</div>
+                  <div class="item">Бесплатно</div>
+                  <div class="item">€98,04</div>
+                </td>
+              </tr>
+              <tr class="soderjanie-itogo">
+                <td></td>
+                <td></td>
+                <td>
+                  <div class="item">К оплате:</div>
+                </td>
+                <td>
+                  <div class="item">€670,95</div>
+                </td>
               </tr>
             </tbody>
           </table>
         </div>
-
         <div class="lk-section default-wrapper">
           <div class="heading">
-            <h2 class="title-1">Проверьте статус заказа</h2>
+            <h2 class="title-1">Данные о доставке</h2>
           </div>
-          <div class="text-row">
-            <div class="col">
-              <p>Узнайте статус вашего заказа на сайте транспортной компании, которую вы выбрали для доставки:</p>
-            </div>
-            <div class="col">
-              <p>Заранее скопируйте номер вашего заказа, чтобы ввести его при проверке статуса.</p>
-            </div>
-          </div>
-          <div class="logo-row">
-            <img src="img/lk/dpd.png" alt="dpd">
-            <img src="img/lk/omniva.png" alt="omniva">
-          </div>
-        </div>
-
-        <div class="lk-section default-wrapper">
-          <div class="heading">
-            <h2 class="title-1">Есть вопросы по заказу? Спросите нас</h2>
-          </div>
-          <div class="lk__contacts">
-            <div class="col">
-              <div class="contacts-item"><i class="icomoon icon-phone"></i><a href="tel:+37256661608">+372 5666 1608</a></div>
-              <div class="contacts-item"><i class="icomoon icon-postal"></i><a href="mailto:info@warmsystem.eu">info@warmsystem.eu</a></div>
-              <div class="contacts-item"><i class="icomoon icon-place"></i><p>Punane 50, Tallinn, 13619, Estonia</p></div>
-            </div>
-            <div class="col">
-              <div class="contacts-item"><i class="icomoon icon-tech"></i><p>Техподдержка: <a href="tel:+37256902030">+372 5690 2030</a></p></div>
-              <div class="row">
-                <a href="#" class="contacts-item"><img src="img/icons/whatsapp.svg" alt=""> WhatsApp</a>
-                <a href="#" class="contacts-item"><img src="img/icons/viber.svg" alt=""> Viber</a>
+          <div class="lk-delivery">
+            <div class="lk-delivery-cards">
+              <div class="lk-deliverycard">
+                <h4>Получатель</h4>
+                <p>Имя Фамилия</p>
+                <p>Номер телефона</p>
+              </div>
+              <div class="lk-deliverycard">
+                <h4>Платежный адрес:</h4>
+                <p>Улица, дом и квартира</p>
+                <p>Город, страна и индекс</p>
+              </div>
+              <div class="lk-deliverycard">
+                <h4>Адрес доставки:</h4>
+                <p>Улица, дом и квартира</p>
+                <p>Город, страна и индекс</p>
               </div>
             </div>
           </div>
