Адаптация: Payment, Delivery, How to order, 404

--- a/src/404.html
+++ b/src/404.html
@@ -21,6 +21,10 @@
           <span>404</span>
           <h1 class="title-1">Такой страницы не существует</h1>
           <a href="index.html" class="link">Вернуться на главную</a>
+          <div class="imgs">
+            <img src="img/errorpage-img-01.jpg" alt="">
+            <img src="img/errorpage-img-02.jpg" alt="">
+          </div>
         </div>
       </div>
     </section>
