Адаптация: Страницы Личного кабинета

--- a/src/lk-settings-ur.html
+++ b/src/lk-settings-ur.html
@@ -20,7 +20,7 @@
         <div class="lk-section default-wrapper">
           <div class="lk-head">
             <h1 class="lk-title">Настройки профиля</h1>
-            <a href="lk.html" class="link">Вернуться к учетной записи</a>
+            <a href="lk.html" class="link mob-hidden">Вернуться к учетной записи</a>
           </div>
           <div class="row-3">
             <div class="col">
@@ -66,19 +66,19 @@
             </div>
             <div class="col">
               <div class="row-1">
-                <div class="lk-form-title">Компания</div>
+                <div class="form-title">Компания</div>
                 <div class="form-group">
                   <input type="text" class="form-input" placeholder="Название">
                 </div>
               </div>
               <div class="row-1">
-                <div class="lk-form-title">Регистрационный номер</div>
+                <div class="form-title">Регистрационный номер</div>
                 <div class="form-group">
                   <input type="text" class="form-input" placeholder="Номер">
                 </div>
               </div>
               <div class="row-1">
-                <div class="lk-form-title">KMKR номер</div>
+                <div class="form-title">KMKR номер</div>
                 <div class="form-group">
                   <input type="text" class="form-input" placeholder="Номер">
                 </div>
@@ -90,6 +90,9 @@
                 </label>
               </div>
             </div>
+          </div>
+          <div class="lk-bottom desktop-hidden">
+            <a href="lk.html" class="link">Вернуться к учетной записи</a>
           </div>
         </div>
 
