--- a/src/lk-settings.html
+++ b/src/lk-settings.html
@@ -20,7 +20,7 @@
         <div class="lk-section default-wrapper">
           <div class="lk-head">
             <h1 class="lk-title">Настройки профиля</h1>
-            <a href="lk.html" class="link">Вернуться к учетной записи</a>
+            <a href="lk.html" class="link mob-hidden">Вернуться к учетной записи</a>
           </div>
           <div class="row-3">
             <div class="col">
@@ -72,6 +72,9 @@
                 </label>
               </div>
             </div>
+          </div>
+          <div class="lk-bottom desktop-hidden">
+            <a href="lk.html" class="link">Вернуться к учетной записи</a>
           </div>
         </div>
 
