--- a/src/widgets/cart.html
+++ b/src/widgets/cart.html
@@ -14,7 +14,7 @@
       </div>
       <form class="woocommerce-cart-form cart-cards">
         <div class="cart-card woocommerce-cart-form__cart-item cart_item">
-          <a href="#" class="cart-card-remove"><i class="icomoon icon-remove"></i>Удалить</a>
+          <a href="#" class="cart-card-remove"><i class="icomoon icon-remove"></i><span>Удалить</span></a>
           <div class="product-thumbnail cart-card-img">
             <a href="#"><img width="150" height="150" src="img/cart-card-img.png" class="woocommerce-placeholder wp-post-image ls-is-cached lazyloaded"></a>
           </div>
@@ -26,6 +26,11 @@
               </div>
             </div>
             <div class="cart-card-total">
+              <div class="col desktop-hidden">
+                <span class="woocommerce-Price-amount amount">
+                  <bdi>24,10&nbsp;<span class="woocommerce-Price-currencySymbol">€</span></bdi>
+                </span>
+              </div>
               <div class="col">
                 <div class="quantity">
                   <input type="number" name="quantity" value="1" min="1" max="" step="1" placeholder="" inputmode="numeric">
@@ -37,7 +42,7 @@
               </div>
               <div class="col">
                 <div class="cart-card-total-price">
-                  <span>3x 
+                  <span class="mob-hidden">3x 
                     <span class="woocommerce-Price-amount amount">
                       <bdi>24,10&nbsp;<span class="woocommerce-Price-currencySymbol">€</span></bdi>
                     </span>
@@ -51,7 +56,7 @@
           </div>
         </div>
         <div class="cart-card woocommerce-cart-form__cart-item cart_item">
-          <a href="#" class="cart-card-remove"><i class="icomoon icon-remove"></i>Удалить</a>
+          <a href="#" class="cart-card-remove"><i class="icomoon icon-remove"></i><span>Удалить</span></a>
           <div class="product-thumbnail cart-card-img">
             <a href="#"><img width="150" height="150" src="img/cart-card-img.png" class="woocommerce-placeholder wp-post-image ls-is-cached lazyloaded"></a>
           </div>
@@ -63,6 +68,11 @@
               </div>
             </div>
             <div class="cart-card-total">
+              <div class="col desktop-hidden">
+                <span class="woocommerce-Price-amount amount">
+                  <bdi>24,10&nbsp;<span class="woocommerce-Price-currencySymbol">€</span></bdi>
+                </span>
+              </div>
               <div class="col">
                 <div class="quantity">
                   <input type="number" name="quantity" value="1" min="1" max="" step="1" placeholder="" inputmode="numeric">
@@ -74,7 +84,7 @@
               </div>
               <div class="col">
                 <div class="cart-card-total-price">
-                  <span>3x 
+                  <span class="mob-hidden">3x 
                     <span class="woocommerce-Price-amount amount">
                       <bdi>24,10&nbsp;<span class="woocommerce-Price-currencySymbol">€</span></bdi>
                     </span>
@@ -88,7 +98,7 @@
           </div>
         </div>
       </form>
-      <div class="cart-collaterals cart-bottom">
+      <div class="cart-bottom">
         <div class="cart_totals">
           <div class="row">
             <div class="col">Сумма:</div>
