--- a/src/lk-orders.html
+++ b/src/lk-orders.html
@@ -37,14 +37,14 @@
                 <td>21/11/2022</td>
                 <td>849555738</td>
                 <td>€108,99</td>
-                <td><a href="#" download="download" class="link-withicon"><i class="icomoon icon-download"></i> Скачать счет</a></td>
+                <td><a href="#" download="download" class="download-link"><i class="icomoon icon-download"></i> Скачать счет</a></td>
                 <td><a href="lk-order.html">Подробности</a></td>
               </tr>
               <tr>
                 <td>01/01/2022</td>
                 <td>127653308</td>
                 <td>€45,45</td>
-                <td><a href="#" download="download" class="link-withicon"><i class="icomoon icon-download"></i> Скачать счет</a></td>
+                <td><a href="#" download="download" class="download-link"><i class="icomoon icon-download"></i> Скачать счет</a></td>
                 <td><a href="lk-order.html">Подробности</a></td>
               </tr>
             </tbody>
@@ -54,14 +54,14 @@
               <div class="row"><span>Дата заказа:</span> 21/11/2022</div>
               <div class="row"><span>Номер:</span> 849555738</div>
               <div class="row"><span>Сумма:</span> €108,99</div>
-              <a href="#" download="download" class="link-withicon"><i class="icomoon icon-download"></i> Скачать счет</a>
+              <a href="#" download="download" class="download-link"><i class="icomoon icon-download"></i> Скачать счет</a>
               <a href="lk-order.html">Подробности</a>
             </div>
             <div class="orders-item">
               <div class="row"><span>Дата заказа:</span> 21/11/2022</div>
               <div class="row"><span>Номер:</span> 849555738</div>
               <div class="row"><span>Сумма:</span> €108,99</div>
-              <a href="#" download="download" class="link-withicon"><i class="icomoon icon-download"></i> Скачать счет</a>
+              <a href="#" download="download" class="download-link"><i class="icomoon icon-download"></i> Скачать счет</a>
               <a href="lk-order.html">Подробности</a>
             </div>
           </div>
@@ -83,8 +83,8 @@
             </div>
           </div>
           <div class="logo-row">
-            <img src="img/lk/dpd.png" alt="dpd">
-            <img src="img/lk/omniva.png" alt="omniva">
+            <a target="_blank" href="https://www.dpd.com/ee/en/track-parcel/"><img src="img/lk/dpd.png" alt="dpd"></a>
+            <a target="_blank" href="https://www.omniva.ee/private/track_and_trace"><img src="img/lk/omniva.png" alt="dpd"></a>
           </div>
         </div>
 
