--- a/src/widgets/cart.html
+++ b/src/widgets/cart.html
@@ -115,7 +115,7 @@
             </div>
           </div>
           <div class="wc-proceed-to-checkout">
-            <a href="#" class="checkout-button alt wc-forward link-withicon"><i class="icomoon icon-cart"></i><span>Оформить заказ</span></a>
+            <a href="#" class="checkout-button alt wc-forward link-withicon"><i class="icomoon icon-wallet"></i><span>Оформить заказ</span></a>
           </div>
         </div>
       </div>
