--- a/src/widgets/faq.html
+++ b/src/widgets/faq.html
@@ -67,7 +67,7 @@
           <div class="accordion-button"></div>
         </div>
         <div class="accordion-content">
-          <p>Мы продаем только надежные экономичные приборы, которые работают эффективно и покупатели ими довольны. Убедитесь в этом на странице Отзывы</p>
+          <p>Мы продаем только надежные экономичные приборы, которые работают эффективно и покупатели ими довольны. Убедитесь в этом на странице <a href="reviews.html">Отзывы</a></p>
         </div>
       </div>
       <div class="accordion-item">
