--- a/src/widgets/how-to-order.html
+++ b/src/widgets/how-to-order.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="default-wrapper">
       <div class="heading">
-        <h1 class="title-1">Гарантия и возврат</h1>
+        <h1 class="title-1">Как сделать заказ</h1>
       </div>
       <div class="orderbl__cards">
         <div class="step">
