--- a/src/widgets/product.html
+++ b/src/widgets/product.html
@@ -165,14 +165,16 @@
               <div class="benefit-icon"><img src="img/check.svg" alt=""></div>
               Гарантия 5 лет
             </div>
-            <div class="benefit-head">
-              <div class="benefit-icon"><img src="img/calendar.svg" alt=""></div>
-              30-дневная гарантия возврата денег
-            </div>
-            <div class="benefit-head">
-              <div class="benefit-icon"><img src="img/recycle.svg" alt=""></div>
-              Вывезем старое оборудование
-            </div>
+        </div>
+        <div class="product__benefits">
+          <div class="benefit-head">
+            <div class="benefit-icon"><img src="img/calendar.svg" alt=""></div>
+            30-дневная гарантия возврата денег
+          </div>
+          <div class="benefit-head">
+            <div class="benefit-icon"><img src="img/recycle.svg" alt=""></div>
+            Вывезем старое оборудование
+          </div>
         </div>
         <div class="product__points">
           <div class="point"><div class="numb">(01)</div>Низкое энергопотребление</div>
