--- a/src/cartbar.html
+++ b/src/cartbar.html
@@ -9,7 +9,7 @@
   @@include('template/meta.html')
 </head>
 
-<body>
+<body class="dis-scroll">
 
   @@include('template/header.html')
 
@@ -78,6 +78,12 @@
         </div>
         <div class="cartbar-footer">
           <div class="cartbar-total">
+            <div class="cartbar-group">
+              <div class="form-group promocode-form">
+                <button class="btn-reset"><i class="icomoon icon-arrow-next"></i></button>
+                <input type="text" class="form-input" placeholder="Промокод">
+              </div>
+            </div>
             <div class="cartbar-group">
               <div class="row">
                 <div class="col">Сумма:</div>
