--- a/src/oformlenie-company-and-drugayaoplata.html
+++ b/src/oformlenie-company-and-drugayaoplata.html
@@ -208,7 +208,8 @@
                   <p class="form-group checkbox">
                     <label>
                       <input type="checkbox" class="input-checkbox">
-                      <span>Cash on delivery через Omniva <strong class="tooltip">Текст подсказки</strong></span>
+                      <span>Cash on delivery через Omniva</span>
+                      <strong class="tooltip" data-tooltip="С этим вариантом оплаты вы платите при получении посылки курьером. После платежа вы сможете забрать посылку."><img src="/img/icons/tooltip.svg" alt=""></strong>
                     </label>
                   </p>
                   <p class="form-group checkbox">
