--- a/src/widgets/gallery.html
+++ b/src/widgets/gallery.html
@@ -2,27 +2,27 @@
   <div class="container">
     <div class="gallery__grid">
       <div class="one">
-        <a data-fancybox="gallery" href="img/gallery-01.jpg">
+        <a data-fancybox="gallery" href="img/gallery-01-big.jpeg">
           <img src="img/gallery-01.jpg" />
         </a>
       </div>
       <div class="two">
-        <a data-fancybox="gallery" href="img/gallery-02.jpg">
+        <a data-fancybox="gallery" href="img/gallery-02-big.jpeg">
           <img src="img/gallery-02.jpg" />
         </a>
       </div>
       <div class="three">
-        <a data-fancybox="gallery" href="img/gallery-03.jpg">
+        <a data-fancybox="gallery" href="img/gallery-03-big.jpeg">
           <img src="img/gallery-03.jpg" />
         </a>
       </div>
       <div class="four">
-        <a data-fancybox="gallery" href="img/gallery-04.jpg">
+        <a data-fancybox="gallery" href="img/gallery-04-big.jpeg">
           <img src="img/gallery-04.jpg" />
         </a>
       </div>
       <div class="five">
-        <a data-fancybox="gallery" href="img/gallery-05.jpg">
+        <a data-fancybox="gallery" href="img/gallery-05-big.jpeg">
           <img src="img/gallery-05.jpg" />
         </a>
       </div>
