--- a/src/oformlenie-company-and-drugayaoplata.html
+++ b/src/oformlenie-company-and-drugayaoplata.html
@@ -299,9 +299,9 @@
           <div class="cart-bottom">
             <div class="cart-bottom-container">
               <a href="cart.html" class="back-link"><i class="icomoon icon-chevron"></i>Назад</a>
-              <button class="link-withicon"><i class="icomoon icon-wallet"></i><span>Перейти к оплате</span></button>
+              <button class="link-withicon"><i class="icomoon icon-wallet"></i><span>Заказать</span></button>
             </div>
-            <div class="cart-bottom-text">На следующем шаге вы сможете совершить оплату</div>
+            <div class="cart-bottom-text">Мы примем ваш заказ и свяжемся с вами для уточнения дополнительной информации</div>
           </div>
         </div>
       </div>
