--- a/src/widgets/special.html
+++ b/src/widgets/special.html
@@ -7,7 +7,7 @@
       <div class="default-wrapper-dark">
         <h2 class="title-1">Получите индивидуальное предложение <span>под ваши потребности</span></h2>
         <p>Ответьте на 7 вопросов, это займет 1 минуту</p>
-        <a href="#" class="link">Получить индивидуальное предложение</a>
+        <a href="#" class="link mob-link-nounderline">Получить индивидуальное предложение</a>
       </div>
     </div>
   </div>
