--- a/src/widgets/reviews.html
+++ b/src/widgets/reviews.html
@@ -222,6 +222,7 @@
         </div>
         <div class="swiper-bottom">
           <div class="swiper-pagination"></div>
+          <div class="swiper-pagination-bullets"></div>
           <div class="swiper-nav">
             <div class="swiper-button-next"></div>
             <div class="swiper-button-prev"></div>
